--- a/trunk/android/HsaCalendar/res/xml/appwidget_provider.xml
+++ b/trunk/android/HsaCalendar/res/xml/appwidget_provider.xml
@@ -3,6 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:minWidth="294dp"
   android:minHeight="294dp"
-  android:updatePeriodMillis="86400000"
+  android:name="@string/widget44_name"
   android:initialLayout="@layout/widget4_4">
 </appwidget-provider>
