--- a/HsClosableTab/src/HsClosableTabTest.mxml
+++ b/HsClosableTab/src/HsClosableTabTest.mxml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
-			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" xmlns:closableTab="org.hamster.closableTab.*">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" 
+			    minWidth="955" minHeight="600" xmlns:closableTab="org.hamster.closableTab.*">
 	<mx:HBox width="100%" height="40" verticalAlign="middle">
 		<mx:CheckBox id="closableCheckBox" selected="true" label="closable" />
 		<mx:CheckBox id="alwaysShowCloseButtonCheckBox" selected="false" label="always show close button" />
@@ -20,4 +16,4 @@
 		<mx:Canvas backgroundColor="#FF0000" label="red" />
 	</closableTab:HsClosableTabNavigator>
 	
-</s:Application>
+</mx:Application>
