--- a/android/HsaCalendar/res/layout/widget4_4.xml
+++ b/android/HsaCalendar/res/layout/widget4_4.xml
@@ -8,86 +8,89 @@
     android:layout_width="320dp"
     android:layout_height="400dp"
     android:background="@drawable/background" />
-  <ImageView android:id="@+id/View_background2"
+ <!--  <ImageView android:id="@+id/View_background2"
     android:layout_y="0dp"
     android:layout_width="320dp"
     android:layout_height="400dp"
-    android:background="@drawable/background2" />
+    android:background="@drawable/background2" /> -->
   <ImageButton android:id="@+id/View_RightButton"
     android:layout_x="260dp"
     android:layout_y="50dp"
-    android:layout_width="40dp"
-    android:layout_height="45dp" 
+    android:layout_width="38dp"
+    android:layout_height="38dp" 
     android:background="@drawable/switchbutton"/>
   <ImageButton android:id="@+id/View_LeftButton"
     android:layout_x="10dp"
     android:layout_y="50dp"
-    android:layout_width="40dp"
-    android:layout_height="45dp" 
+    android:layout_width="38dp"
+    android:layout_height="38dp" 
     android:background="@drawable/switchbuttonl"/> 
     
   <ImageView android:id="@+id/View_monthImage"
-    android:layout_x="50dp"
-    android:layout_y="60dp"
-    android:layout_width="100dp"
-    android:layout_height="35dp" />  
-  <ImageView android:id="@+id/View_weekImage"
-    android:layout_x="20dp"
-    android:layout_y="105dp"
-    android:layout_width="280dp"
-    android:layout_height="25dp"
-    android:background="@drawable/week_label" />
+    android:layout_x="0dp"
+    android:layout_y="320dp"
+    android:layout_width="300dp"
+    android:layout_height="80dp" /> 
   <ImageView android:id="@+id/View_yearImage"
-    android:layout_x="150dp"
-    android:layout_y="60dp"
-    android:layout_width="100dp"
-    android:layout_height="35dp" />  
+    android:layout_x="10dp"
+    android:layout_y="280dp"
+    android:layout_width="250dp"
+    android:layout_height="70dp" />
+    
+    
+  <ImageView android:id="@+id/View_weekImage"
+    android:layout_x="25dp"
+    android:layout_y="90dp"
+    android:layout_width="270dp"
+    android:layout_height="14dp"
+    android:background="@drawable/week_label" />
+
   <AbsoluteLayout android:id="@+id/Layout_mainDayList"
-    android:layout_x="20dp"
-    android:layout_y="130dp"
-    android:layout_width="280dp"
-    android:layout_height="270dp">
-    <ImageView android:id="@+id/View_day11" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day12" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day13" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day14" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day15" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day16" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day17" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="0dp" />
-    <ImageView android:id="@+id/View_day21" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day22" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day23" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day24" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day25" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day26" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day27" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="45dp" />
-    <ImageView android:id="@+id/View_day31" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day32" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day33" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day34" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day35" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day36" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day37" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="90dp" />
-    <ImageView android:id="@+id/View_day41" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day42" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day43" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day44" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day45" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day46" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day47" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="135dp" />
-    <ImageView android:id="@+id/View_day51" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day52" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day53" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day54" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day55" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day56" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day57" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="180dp" />
-    <ImageView android:id="@+id/View_day61" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="0dp"   android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day62" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="40dp"  android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day63" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="80dp"  android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day64" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="120dp" android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day65" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="160dp" android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day66" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="200dp" android:layout_y="225dp" />
-    <ImageView android:id="@+id/View_day67" android:layout_width="40dp" android:layout_height="45dp" android:layout_x="240dp" android:layout_y="225dp" />
+    android:layout_x="25dp"
+    android:layout_y="110dp"
+    android:layout_width="266dp"
+    android:layout_height="266dp">
+    <ImageView android:id="@+id/View_day11" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day12" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day13" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day14" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day15" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day16" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day17" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="0dp" />
+    <ImageView android:id="@+id/View_day21" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day22" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day23" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day24" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day25" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day26" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day27" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="38dp" />
+    <ImageView android:id="@+id/View_day31" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day32" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day33" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day34" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day35" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day36" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day37" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="76dp" />
+    <ImageView android:id="@+id/View_day41" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day42" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day43" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day44" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day45" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day46" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day47" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="114dp" />
+    <ImageView android:id="@+id/View_day51" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day52" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day53" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day54" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day55" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day56" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day57" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="152dp" />
+    <ImageView android:id="@+id/View_day61" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="0dp"   android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day62" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="38dp"  android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day63" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="76dp"  android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day64" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="114dp" android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day65" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="152dp" android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day66" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="190dp" android:layout_y="190dp" />
+    <ImageView android:id="@+id/View_day67" android:layout_width="38dp" android:layout_height="38dp" android:layout_x="228dp" android:layout_y="190dp" />
   </AbsoluteLayout>
 </AbsoluteLayout>
